--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.7.7", features = ["macros"] }
+futures = "0.3.30"
 mpris = "2.0.1"
 reqwest = { version = "0.12.8", features = ["stream"] }
 serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
+tokio-stream = "0.1.16"
 tokio-util = "0.7.12"
 tower-http = { version = "0.6.1", features = ["fs"] }
