--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.89"
 axum = { version = "0.7.7", features = ["macros"] }
 futures = "0.3.30"
+http = "1.1.0"
+log = { version = "0.4.22", features = ["std"] }
 mpris = "2.0.1"
 reqwest = { version = "0.12.8", features = ["stream"] }
 serde = { version = "1.0.210", features = ["derive"] }
