--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1.0.89"
 axum = { version = "0.7.7", features = ["macros"] }
 clap = { version = "4.5.19", features = ["derive"] }
+env_logger = "0.11.5"
 futures = "0.3.30"
 http = "1.1.0"
 log = { version = "0.4.22", features = ["std"] }
