--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ env_logger = "0.11.5"
 futures = "0.3.30"
 http = "1.1.0"
 log = { version = "0.4.22", features = ["std"] }
+mime = "0.3.17"
+mime_guess = "2.0.5"
 mpris = "2.0.1"
 reqwest = { version = "0.12.8", features = ["stream"] }
 serde = { version = "1.0.210", features = ["derive"] }
@@ -19,4 +21,4 @@ serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
 tokio-stream = { version = "0.1.16", features = ["sync"] }
 tokio-util = "0.7.12"
-tower-http = { version = "0.6.1", features = ["fs"] }
+tower-http = { version = "0.6.1", features = ["fs", "set-header"] }
